# sbwt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.manual.script  PLAN.md  README.md  io_build_index.cpp  sbwt_search.cpp  sbwt_search.h
SeqAn-1.1/: GPL.txt  LGPL.txt  README.txt
SeqAn-1.1/seqan/: basic.h  file.h  find.h  index.h  modifier.h  pipe.h  sequence.h  system.h
SeqAn-1.1/seqan/basic/: basic_aggregates.h  basic_allocator_chunkpool.h  basic_allocator_interface.h  basic_allocator_multipool.h  basic_allocator_simple.h  basic_allocator_singlepool.h  basic_allocator_to_std.h  basic_alphabet_interface.h  basic_alphabet_interface2.h  basic_alphabet_simple.h  basic_alphabet_simple_tabs.h  basic_alphabet_trait_basic.h  basic_compare.h  basic_converter.h  basic_counted_ptr.h  basic_debug.h  basic_definition.h  basic_forwards.h  basic_generated_forwards.h  basic_holder.h  basic_host.h  basic_iterator.h  basic_iterator_adapt_std.h  basic_iterator_adaptor.h  basic_iterator_base.h  basic_iterator_position.h  basic_iterator_simple.h  basic_metaprogramming.h  basic_operator.h  basic_pointer.h  basic_profile.h  basic_proxy.h  basic_tag.h  basic_transport.h  basic_type.h  basic_volatile_ptr.h
SeqAn-1.1/seqan/file/: chunk_collector.h  cstream.h  file_array.h  file_base.h  file_cstyle.h  file_filereader.h  file_filereaderiterator.h  file_format.h  file_format_cgviz.h  file_format_embl.h  file_format_fasta.h  file_format_fasta_align.h  file_format_genbank.h  file_format_guess.h  file_format_raw.h  file_forwards.h  file_generated_forwards.h  file_page.h  file_page_raid0.h  meta.h  stream.h  stream_algorithms.h  string_external.h
SeqAn-1.1/seqan/find/: find_abndm.h  find_ahocorasick.h  find_base.h  find_bndm.h  find_bom.h  find_generated_forwards.h  find_horspool.h  find_multi.h  find_multiple_shiftand.h  find_myers_ukkonen.h  find_pex.h  find_quasar.h  find_score.h  find_set_horspool.h  find_shiftand.h  find_shiftor.h  find_swift.h  find_wild_shiftand.h  find_wumanber.h
SeqAn-1.1/seqan/index/: index_base.h  index_bwt.h  index_childtab.h  index_dfi.h  index_esa_algs.h  index_esa_algs_multi.h  index_esa_base.h  index_esa_drawing.h  index_esa_find.h  index_esa_stree.h  index_find.h  index_generated_forwards.h  index_lcp.h  index_lcp_tree.h  index_manual_forwards.h  index_pizzachili.h  index_pizzachili_find.h  index_pizzachili_string.h  index_qgram.h  index_qgram_find.h  index_sa_btree.h  index_sa_lss.h  index_sa_mm.h  index_sa_qsort.h  index_shawarma.h  index_shims.h  index_skew3.h  index_skew7.h  index_skew7_multi.h  index_wotd.h  pipe_merger3.h  pipe_merger7.h  pizzachili_api.h  pump_extender3.h  pump_extender7.h  pump_lcp_core.h  pump_separator7.h  radix.h  repeat_base.h  shape_base.h  (+2 more)
SeqAn-1.1/seqan/modifier/: modifier_functors.h  modifier_generated_forwards.h  modifier_iterator.h  modifier_reverse.h  modifier_shortcuts.h  modifier_string.h  modifier_view.h
SeqAn-1.1/seqan/pipe/: pipe_base.h  pipe_namer.h  pipe_shifter.h  pipe_source.h  pool_mapper.h
SeqAn-1.1/seqan/sequence/: lexical.h  segment_base.h  segment_infix.h  (+16 more)
script/: fastq_to_fasta.sh  perf_test.sh  test.count_occ.sh
script/python-demo/: bwa.py  gen_sanple_seq.py  mbwa.py
script/test-sbwt/: GenRandomDnas.py  GenReferenceAndReads.py  TestSbwtAligner.py  check_position.py  filter.py  gen.rep.py  grap.chr1.py  replica.py  verify.alignment.with.bowtie.py
src/: alphabet.c  alphabet.h  assert_helpers.h  build_index.cc  count_occ.cc  endian_swap.h  io_build_index.cpp  log.cc  ref_read.cpp  ref_read.h  sbwt.cc  sbwt.h  sbwt_aligner.cpp  sbwt_search.cpp  sbwt_search.h  sbwt_test.cpp  sequence_pack.cpp  sequence_pack.h  utility.cc  utility.h  word_io.h
src/utils/: sort.cc  sort.hpp
tests/: hg19_one_sequence.py  mock_reads.py  mock_reads_from_refernce.py  test_build_index_e2e.py  test_sbwt_e2e.py  test_sort.cpp
(+10 files in other folders)
